Fixed horizontal scroll due to 100vw set on add-on section

--- a/scss/_add-on-services.scss
+++ b/scss/_add-on-services.scss
@@ -1,7 +1,7 @@
 .add-on-section {
   @extend .flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   background: lighten($primary-color, 50%);
   margin-top: -200px;
   padding: 220px 0 100px 0;
