--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@ footer {
   position: relative;
   @extend .flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   background: $primary-color;
   padding-bottom: 3vh;
 }
@@ -12,7 +12,7 @@ footer {
   top: 0;
   background-image: url(../img/suds.png);
   background-size: cover;
-  width: 100vw;
+  width: 100%;
   height: 15vw;
   background-position: top;
   background-repeat: repeat-x;
